# learn-you-a-haskell-exercises

./: .gitignore  02-starting-out.hs  03-types-and-typeclasses.hs  04-syntax-in-functions.hs  05-recursion.hs  06-higher-order-functions.hs  07-modules.hs  08-making-our-own-types-and-typeclasses.hs  09-input-and-output.hs  11-functors-applicative-functors-and-monoids.hs  12-a-fistful-of-monads.hs  Assert.hs  DistanceConversions.hs  Main.hs  README.md  learn-you-a-haskell-exercises.cabal  stack.yaml
