name:                learn-you-a-haskell-exercises
version:             0.1.0.0
homepage:            https://github.com/etrepat/learn-you-a-haskell-exercises
license:             GPL3
license-file:        LICENSE
author:              Estanislau Trepat
maintainer:          estanis@etrepat.com
copyright:           Copyright (c) 2017 Estanislau Trepat
category:            Tutorial
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable learn-you-a-haskell-exercises
  hs-source-dirs:      .
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5, random
